--- a/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
+++ b/thesis-app/src/app/registration/components/signin-form/signin-form.component.html
@@ -1,9 +1,8 @@
-<h1>Login Page</h1>
-<div>{{logo}}</div>
-<signin-button buttonText="Signup as Customer"></signin-button>
-<signin-button buttonText="Signup as Stylist"></signin-button>
+<registration-header headerText="Login Page" logo="insert logo url here"></registration-header>
+<signup-button [routerLink]="['/customerSignUp']" buttonText="Signup as Customer"></signup-button>
+<signup-button buttonText="Signup as Stylist"></signup-button>
 <username-password (onInputsChange)="setUserData($event)"></username-password>
-<signin-button buttonText="Login"></signin-button>
+<signup-button buttonText="Login"></signup-button>
 <div>
   <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 </div>
