Add message component, fix signup form checkbox output

--- a/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
+++ b/thesis-app/src/app/customer/components/customer-message/customer-message.component.html
@@ -1,1 +1,3 @@
 <h1>customer messge compomnent</h1>
+<customer-dropdown></customer-dropdown>
+<customer-inbox [messages]="messages"></customer-inbox>
