--- a/thesis-app/src/app/customer/components/customer-booking-list/customer-booking-list.component.html
+++ b/thesis-app/src/app/customer/components/customer-booking-list/customer-booking-list.component.html
@@ -1,4 +1,6 @@
 <h1>Closest to you</h1>
-<div *ngFor="let booking of bookings">
-  {{booking.name}} {{booking.blurb}} {{booking.styling}}
+<div *ngFor="let booking of bookings" [routerLink]="['/stylistProfile']">
+  <div>{{booking.name}}</div>
+  <div>{{booking.blurb}}</div>
+  <div>{{booking.styling}}</div>
 </div>
