hook up post functionality for form submit

--- a/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
+++ b/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
@@ -25,6 +25,6 @@
       [styling]="styling"
     >
     </signup-stylist-form>
-    <button>Register</button>
+    <button type="submit">Register</button>
   </form>
 </div>
