Bind onSelect method, render dropdown options

--- a/thesis-app/src/app/customer/components/customer-dropdown/customer-dropdown.component.html
+++ b/thesis-app/src/app/customer/components/customer-dropdown/customer-dropdown.component.html
@@ -1,6 +1,4 @@
-<select>
-  <option value="Home">Home</option>
-  <option value="Messages">Messages</option>
-  <option value="Settings">Settings</option>
-  <option value="Logout">Logout</option>
+<select (change)="onSelect($event.target.value)">
+  <option *ngFor="let item of items">
+   {{item.value}}</option>
 </select>
