--- a/thesis-app/src/app/registration/components/username-password/username-password.component.html
+++ b/thesis-app/src/app/registration/components/username-password/username-password.component.html
@@ -8,3 +8,10 @@
   (onInputChange)="emitPasswordInputChange($event)"
 >
 </signin-input>
+
+
+
+<!-- <div class="input-group">
+  <span class="input-group-addon" id="basic-addon1">@</span>
+  <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+</div> -->
