modify username and password text

--- a/thesis-app/src/app/registration/components/username-password/username-password.component.html
+++ b/thesis-app/src/app/registration/components/username-password/username-password.component.html
@@ -1,15 +1,19 @@
-<signin-input
-  headerText="Username"
-  (onInputChange)="emitUsernameInputChange($event)"
->
-</signin-input>
-<signin-input
-  headerText="Password"
-  (onInputChange)="emitPasswordInputChange($event)"
->
-</signin-input>
-
-
+<div class="container row">
+  <div class="input-group">
+    <signin-input
+      headerText="Username"
+      (onInputChange)="emitUsernameInputChange($event)"
+    >
+    </signin-input>
+  </div>
+  <div class="input-group">
+    <signin-input
+      headerText="Password"
+      (onInputChange)="emitPasswordInputChange($event)"
+    >
+    </signin-input>
+  </div>
+</div>
 
 <!-- <div class="input-group">
   <span class="input-group-addon" id="basic-addon1">@</span>
