--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,4 +1,4 @@
 <customer-navbar></customer-navbar>
 <customer-dropdown></customer-dropdown>
 <customer-booking-list></customer-booking-list>
-<customer-map></customer-map>
+<customer-map [coordinates]="currentLocation"></customer-map>
