add bootstrap to the login page

--- a/thesis-app/src/app/registration/components/username-password/username-password.component.html
+++ b/thesis-app/src/app/registration/components/username-password/username-password.component.html
@@ -1,13 +1,15 @@
-<div class="container row">
-  <div class="input-group">
+<div class="container row" style="margin: auto;">
+  <div class="input-group" style="margin: auto;">
     <signin-input
+      style="margin: auto;"
       headerText="Username"
       (onInputChange)="emitUsernameInputChange($event)"
     >
     </signin-input>
   </div>
-  <div class="input-group">
+  <div class="input-group" style="margin: auto;">
     <signin-input
+      style="margin: auto"
       headerText="Password"
       (onInputChange)="emitPasswordInputChange($event)"
     >
