Add back console logs and see coordinates button for testing purposes

--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -2,3 +2,4 @@
 <customer-dropdown></customer-dropdown>
 <customer-booking-list></customer-booking-list>
 <customer-map [coordinates]="currentLocation"></customer-map>
+<button (click)="getLocation()">See Coordinates</button>
