add styling to login page

--- a/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
+++ b/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
@@ -37,7 +37,7 @@
         [styling]="styling"
       >
       </signup-stylist-form>
-      <button type="submit">Register</button>
+      <button class="btn btn-primary" type="submit">Register</button>
     </form>
   </div>
 </div>
