update styling for login and signup page

--- a/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
+++ b/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
@@ -5,8 +5,8 @@
       (ngSubmit)="handleSignUp(signUpFormData)" #signUpFormData="ngForm">
       <div class="input-group">
         <!-- Signup as Customer -->
-        <span class="input-group-addon">
-          Signup as a Customer
+        <span class="input-group-addon" style="height: 10px;">
+          <h4>Signup as a Customer</h4>
         </span>
           <input
             class="form-control"
@@ -19,7 +19,7 @@
           >
         <!-- Signup as Stylist -->
         <span class="input-group-addon">
-          Sign up as a Stylist
+          <h4>Sign up as a Stylist</h4>
         </span>
           <input
             class="form-control"
