--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,5 +1,9 @@
-<customer-navbar></customer-navbar>
-<customer-dropdown></customer-dropdown>
-<customer-booking-list></customer-booking-list>
-<customer-map [coordinates]="currentLocation"></customer-map>
-<button (click)="getLocation()">See Coordinates</button>
+<div class="container row">
+  <customer-navbar></customer-navbar>
+  <customer-dropdown></customer-dropdown>
+</div>
+<div class="container row">
+  <customer-booking-list></customer-booking-list>
+  <customer-map [coordinates]="currentLocation"></customer-map>
+  <button (click)="getLocation()">See Coordinates</button>
+</div>
