--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -4,6 +4,6 @@
 </div>
 <div class="container row">
   <customer-booking-list></customer-booking-list>
-  <customer-map [coordinates]="currentLocation"></customer-map>
+  <!-- <customer-map [coordinates]="currentLocation"></customer-map> -->
   <button (click)="getLocation()">See Coordinates</button>
 </div>
