--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -1,7 +1,7 @@
-<div class="container row">
+<div class="container row" style="text-align: center">
   <h2>Ding Dong: It's Cut Time</h2>
 </div>
-<div>
+<div class="container row" style="margin: auto">
   <h3>Where are you located:</h3>
   <input
     placeholder="street address"
