--- a/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
+++ b/thesis-app/src/app/customer/components/customer-home/customer-home.component.html
@@ -1,6 +1,6 @@
 <div class="container row">
   <customer-navbar></customer-navbar>
-  <customer-dropdown></customer-dropdown>
+  <!-- <customer-dropdown></customer-dropdown> -->
 </div>
 <div class="container row">
   <customer-booking-list></customer-booking-list>
