--- a/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
+++ b/thesis-app/src/app/customer/components/customer-navbar/customer-navbar.component.html
@@ -9,4 +9,5 @@
     (change)="handleStreetAddressChange(streetAddress.value)"
   >
   <button (click)="showDropDown()">{{currentCustomer}}</button>
+  <customer-dropdown></customer-dropdown>
 </div>
