add flex box to hair cut types

--- a/thesis-app/src/app/customer/components/customer-map/customer-map.component.html
+++ b/thesis-app/src/app/customer/components/customer-map/customer-map.component.html
@@ -1,4 +1,4 @@
-<div class="map-container" style="flex: 1 1; width: 50%">
+<div class="map-container" style="flex: 1 1;">
 
   <!-- <h2 class="map-title">{{title}}</h2> -->
 
