--- a/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
+++ b/thesis-app/src/app/registration/components/signup-form/signup-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container row">
   <registration-header headerText="Sign Up Page" logo="placeholder logo url"></registration-header>
   <div class="container row" style="margin: auto">
     <form
