increase the height and width of wrapping containers

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -15,7 +15,7 @@
 </div>
 <button (click)="showModal()">Request a cut</button>
 
-<div *ngIf="isShowModal" class="container row">
+<div *ngIf="isShowModal" class="container row wrapper">
   <form #directMessage="ngForm">
     <div class="row location">
       Location: <input name="location" ngModel/>
