--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -1,11 +1,26 @@
+.wrapper {
+  display: flex;
+  border: 5px solid red;
+  justify-content: center;
+  align-items: center;
+  height: 300px;
+}
 .heading {
-  border: 2px solid blue;
+  border: 2px solid black;
+  flex: 1 1;
 }
 
 .location {
   border: 2px solid blue;
+  flex: 1 1;
 }
 
 .message {
   border: 2px solid green;
+  flex: 1 1;
+}
+
+textarea {
+  width: 300px;
+  height: 100px;
 }
