--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -1,19 +1,21 @@
-<div (click)="hideModal()">
-  <h1>{{stylistProfile.name}}'s Profile</h1>
-  <img [src]=stylistProfile.image_url />
-  <p>Location</p>
-  <div>Longitude: {{stylistProfile.longitude}}, Latitude: {{stylistProfile.latitude}}</div>
-  <p>Services I will provide</p>
-  <div *ngFor="let style of ['hard', 'coded', 'styles']">
-    {{style}}
+<div class="container row poppadiv" (click)="hideModal()">
+  <div class="container row">
+    <h1>{{stylistProfile.name}}'s Profile</h1>
+    <img [src]=stylistProfile.image_url />
+    <p>Location</p>
+      <div>Longitude: {{stylistProfile.longitude}}, Latitude: {{stylistProfile.latitude}}</div>
+        <p>Services I will provide</p>
+          <div *ngFor="let style of ['hard', 'coded', 'styles']">
+          {{style}}
+          </div>
+        <p>Gender:</p>
+          <div *ngIf="stylistProfile.gender==='male'">Male</div>
+          <div *ngIf="stylistProfile.gender==='female'">Female</div>
+        <p>Link to personal site:</p>
+      <div>{{stylistProfile.site_url}}</div>
+    </div>
+  <button (click)="showModal()">Request a cut</button>
   </div>
-  <p>Gender:</p>
-  <div *ngIf="stylistProfile.gender==='male'">Male</div>
-  <div *ngIf="stylistProfile.gender==='female'">Female</div>
-  <p>Link to personal site:</p>
-  <div>{{stylistProfile.site_url}}</div>
-</div>
-<button (click)="showModal()">Request a cut</button>
 
 <div *ngIf="isShowModal" class="container row wrapper">
   <form #directMessage="ngForm">
@@ -26,6 +28,8 @@
     </div>
     <div class="row message">
       <textarea name="body" ngModel>Body of the message</textarea>
+    </div>
+    <div class=" row button">
       <button (click)="submitMessage(directMessage.value)">Send</button>
     </div>
   </form>
