--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -9,16 +9,18 @@
       <div class="servicescontainer">
         <p>Services I will provide</p>
         <div class="container row liststyles">
-          <div *ngFor="let style of ['hard', 'coded', 'styles']">
-            {{style}}
+          <div class="styleitems" *ngFor="let style of ['hard', 'coded', 'styles']">
+            <h6>{{style}}</h6>
           </div>
         </div>
       </div>
-        <p>Gender:</p>
+        <!-- <p>Gender:</p>
           <div *ngIf="stylistProfile.gender==='male'">Male</div>
-          <div *ngIf="stylistProfile.gender==='female'">Female</div>
-        <p>Link to personal site:</p>
-      <div>{{stylistProfile.site_url}}</div>
+          <div *ngIf="stylistProfile.gender==='female'">Female</div> -->
+      <h5>Link to personal site:</h5>
+      <div class="row linktosite">
+        <a href="stylistProfile.site_url">{{stylistProfile.site_url}}</a>
+      </div>
     </div>
     <button (click)="showModal()">Request a cut</button>
   </div>
