adjust profile sizing and add overflow property to profile

--- a/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist-profile.component.html
@@ -1,7 +1,7 @@
 <div class="container row poppadiv" (click)="hideModal()">
   <div class="container row profile" >
     <div class="container locationwrapper">
-      <img [src]=stylistProfile.image_url />
+      <img class="profileimage" [src]=stylistProfile.image_url />
       <p>Location</p>
       <div>
         Longitude: {{stylistProfile.longitude}}, Latitude: {{stylistProfile.latitude}}
@@ -9,10 +9,16 @@
     </div>
 
     <div class="servicescontainer">
-      <p>Services I will provide</p>
+      <h5>Services I will provide</h5>
       <div class="container row liststyles">
         <div class="styleitems" *ngFor="let style of ['hard', 'coded', 'styles']">
           <h6>{{style}}</h6>
+        </div>
+      </div>
+      <div class="container row">
+        <h5>About Me</h5>
+        <div class="paragraph">
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
         </div>
       </div>
     </div>
