--- a/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
+++ b/thesis-app/src/app/customer/components/stylist-profile/stylist.profile.component.css
@@ -1,33 +1,34 @@
 .poppadiv {
-  border: 5px solid yellow;
+  border: 2px solid black;
   display: flex;
   flex-wrap: wrap;
 }
 
 .profile {
-  border: 2px solid red;
   display: flex;
   flex-wrap: wrap;
 }
 
 .profileimage {
-  border-radius: 100px;
+  border-radius: 150px;
+  padding-top: 10px;
 }
 
 .locationwrapper {
-  border: 3px solid purple;
   flex: 1 1;
   width: 30%;
 }
 
 .servicescontainer {
-  border: 2px solid red;
+  /*border: 2px solid red;*/
   flex: 1 1;
   width: 68%;
 }
 
 .personalcontainer {
-  border: 3px solid orange;
+  /*border: 3px solid orange;*/
+  display: flex;
+  width: 100%;
 }
 
 .wrapper {
@@ -60,10 +61,6 @@ textarea {
   align-self: right;
 }
 
-.servicescontainer {
-  border: 2px solid red;
-}
-
 .liststyles {
   border-bottom: 2px solid black;
   width: 100%;
@@ -80,13 +77,17 @@ textarea {
 
 .linktosite {
   border: 1px solid black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 75%;
 }
-
+/*
+.link {
+  flex: 1 1 50%;
+  border: 2px solid red;
+}
+*/
 .paragraph {
   overflow: scroll;
   width: 68%;
-  border: 2px solid;
+  border-top: 2px solid;
+  /*border: 2px solid;*/
 }
